[gd_scene load_steps=10 format=2]

[ext_resource path="res://MainMenu/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/clouds.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/Font20.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/blank_map.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 4 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.397804 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 1080 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
custom_constants/separation = 10

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 58.0
margin_bottom = 31.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 409.0
margin_bottom = 999.0
custom_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn"]
margin_right = 409.0
margin_bottom = 882.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 402.0
margin_bottom = 875.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 390.0
margin_bottom = 863.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn/PanelContainer/MarginContainer/ScrollContainer"]
margin_right = 385.0
margin_bottom = 858.0
rect_min_size = Vector2( 385, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="AddPlayerButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn"]
margin_top = 892.0
margin_right = 409.0
margin_bottom = 923.0
custom_fonts/font = ExtResource( 3 )
text = "Add Player"

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn"]
margin_top = 933.0
margin_right = 409.0
margin_bottom = 964.0
custom_fonts/font = ExtResource( 3 )
text = "Host"

[node name="IPEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn"]
margin_top = 974.0
margin_right = 409.0
margin_bottom = 999.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 0
text = "IP:PORT"

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 424.0
margin_right = 1880.0
margin_bottom = 999.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="MapChoice" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn"]
margin_right = 1456.0
margin_bottom = 527.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1449.0
margin_bottom = 520.0
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer"]
margin_left = 5.0
margin_right = 1437.0
margin_bottom = 508.0

[node name="MapTitle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer"]
margin_right = 1432.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Map Title"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 1432.0
margin_bottom = 508.0

[node name="PrevMap" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 392.0
margin_bottom = 455.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "<"

[node name="Screenshot" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 396.0
margin_right = 1036.0
margin_bottom = 455.0
texture = ExtResource( 5 )

[node name="NextMap" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1040.0
margin_right = 1432.0
margin_bottom = 455.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = ">"

[node name="GameModeOptions" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn"]
margin_top = 542.0
margin_right = 1456.0
margin_bottom = 999.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1449.0
margin_bottom = 450.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1427.0
margin_bottom = 428.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
margin_right = 1412.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Game Mode:"

[node name="GameMode" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 320.0
margin_bottom = 25.0
rect_min_size = Vector2( 200, 0 )
toggle_mode = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 1412.0
margin_bottom = 44.0

[node name="TDMOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 1412.0
margin_bottom = 343.0
size_flags_vertical = 3
columns = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/TDMOptions"]
margin_right = 118.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Max Lives:"

[node name="MaxLives" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/TDMOptions"]
margin_left = 122.0
margin_right = 196.0
margin_bottom = 25.0
min_value = 1.0
value = 5.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/TDMOptions"]
margin_top = 29.0
margin_right = 118.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "Num Teams:"

[node name="NumTeams" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/TDMOptions"]
margin_left = 122.0
margin_top = 29.0
margin_right = 196.0
margin_bottom = 54.0
value = 2.0
editable = false

[node name="CTFOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
visible = false
margin_top = 40.0
margin_right = 857.0
margin_bottom = 215.0
size_flags_vertical = 3
columns = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/CTFOptions"]
margin_right = 123.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "CTF Options"

[node name="OverruleOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
visible = false
margin_top = 208.0
margin_right = 1412.0
margin_bottom = 342.0
size_flags_vertical = 3
columns = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/OverruleOptions"]
visible = false
margin_right = 169.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Overrule Options"

[node name="SurvivalOptions" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
visible = false
margin_top = 40.0
margin_right = 857.0
margin_bottom = 215.0
size_flags_vertical = 3
columns = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/SurvivalOptions"]
margin_right = 123.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Survival Options"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 1412.0
margin_bottom = 413.0
alignment = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1179.0
margin_right = 1412.0
margin_bottom = 55.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "Start Game"
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeftColumn/AddPlayerButton" to="." method="_add_player"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer/HBoxContainer/PrevMap" to="." method="_on_PrevMap_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/MapChoice/MarginContainer/VBoxContainer/HBoxContainer/NextMap" to="." method="_on_NextMap_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/HBoxContainer/GameMode" to="." method="_on_GameMode_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RightColumn/GameModeOptions/MarginContainer/VBoxContainer/HBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]
